2006-09-26  Jürg Billeter  <j@bitron.ch>

	* vala/valaassignment.vala, vala/valabinaryexpression.vala,
	  vala/valacastexpression.vala, vala/valadostatement.vala,
	  vala/valaexpressionstatement.vala, vala/valaforeachstatement.vala,
	  vala/valaforstatement.vala, vala/valaifstatement.vala,
	  vala/valainvocationexpression.vala, vala/valamemberaccess.vala,
	  vala/valaparenthesizedexpression.vala, vala/valareturnstatement.vala,
	  vala/valaswitchstatement.vala, vala/valaunaryexpression.vala,
	  vala/valawhilestatement.vala: add missing cast

2006-09-03  Jürg Billeter  <j@bitron.ch>

	* vala/scanner.l: make character_literal stricter
	* vala/valacodegenerator.vala: support more method return types,
	  support unicode character literals
	* vala/valacharacterliteral.vala: validate input, add get_char method

2006-09-02  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valacodecontext.vala,
	  vala/valasemanticanalyzer.vala, vala/valamemorymanager.vala,
	  vala/valacodegenerator.vala, vala/valaarraycreationexpression.vala,
	  vala/valablock.vala, vala/valacallback.vala, vala/valaclass.vala,
	  vala/valaelementaccess.vala, vala/valafield.vala,
	  vala/valaformalparameter.vala, vala/valaforstatement.vala,
	  vala/valainitializerlist.vala, vala/valainterface.vala,
	  vala/valainvocationexpression.vala, vala/valainvokable.vala,
	  vala/valalambdaexpression.vala,
	  vala/valalocalvariabledeclaration.vala, vala/valamemberaccess.vala,
	  vala/valamethod.vala, vala/valanamespace.vala,
	  vala/valaobjectcreationexpression.vala, vala/valasignal.vala,
	  vala/valasourcefile.vala, vala/valastruct.vala,
	  vala/valaswitchsection.vala, vala/valaswitchstatement.vala,
	  vala/valatypereference.vala, vala/valavariabledeclarator.vala,
	  ccode/valaccodefragment.vala, vapi/glib-2.0.vala: always default type
	  arguments to strong
	* vala/valacodevisitor.vala, vala/valacodegenerator.vala,
	  vala/valaexpression.vala, vala/valareturnstatement.vala: avoid